--- a/packages/cypress/tsconfig.spec.json
+++ b/packages/cypress/tsconfig.spec.json
@@ -2,7 +2,7 @@
    "extends": "./tsconfig.json",
    "compilerOptions": {
       "outDir": "../../dist/out-tsc",
-      "types": ["vitest/globals", "vitest/importMeta", "vite/client", "node"]
+      "types": ["cypress"]
    },
    "include": [
       "vite.config.ts",
