fix: skipping behaviour when errors are thrown and various build errors

--- a/nx.json
+++ b/nx.json
@@ -23,5 +23,8 @@
       "test": {
          "inputs": ["default", "^default"]
       }
+   },
+   "targetDependencies": {
+      "build": ["^build"]
    }
 }
