--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
       "nx": "15.9.2",
       "prettier": "^2.6.2",
       "typescript": "~4.9.5",
+      "typescript-transform-paths": "^3.4.6",
       "vite": "^4.0.1",
       "vite-plugin-eslint": "^1.8.1",
       "vite-tsconfig-paths": "^4.0.2",
