--- a/packages/cypress/project.json
+++ b/packages/cypress/project.json
@@ -13,7 +13,7 @@
             "tsConfig": "packages/cypress/tsconfig.lib.json",
             "assets": [],
             "project": "packages/cypress/package.json",
-            "compiler": "swc"
+            "compiler": "tsc"
          }
       },
       "lint": {
