--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "cypress": "^12.10.0",
       "eslint": "~8.15.0",
       "eslint-config-prettier": "8.1.0",
+      "eslint-plugin-cypress": "^2.10.3",
       "jsdom": "~20.0.3",
       "nx": "15.9.2",
       "prettier": "^2.6.2",
@@ -34,6 +35,7 @@
       "packages/*"
    ],
    "dependencies": {
+      "@nx/cypress": "^16.0.1",
       "@swc/helpers": "~0.5.0"
    }
 }
