feat: include or exclude tests using custom tags

--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -1,5 +1,5 @@
 {
-   "name": "leftest-core",
+   "name": "leftest",
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "sourceRoot": "packages/core/src",
    "projectType": "library",
