--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -3,10 +3,9 @@
    "version": "0.0.2",
    "type": "module",
    "dependencies": {
-      "@antischematic/leftest-core": "^0.0.2"
+      "@antischematic/leftest": "^0.0.2"
    },
    "peerDependencies": {
-      "cypress": "^12.0.0",
       "mocha": "^10.0.0"
    }
 }
