--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -1,11 +1,9 @@
 {
    "name": "@antischematic/leftest-cypress",
-   "version": "0.0.2",
+   "version": "0.0.3",
    "type": "module",
-   "dependencies": {
-      "@antischematic/leftest": "^0.0.2"
-   },
    "peerDependencies": {
-      "mocha": "^10.0.0"
+      "mocha": "^10.0.0",
+      "@antischematic/leftest": "^0.0.3"
    }
 }
