build: add package metadata

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,15 @@
 {
    "name": "@antischematic/leftest",
+   "description": "Shift-Left Testing for JavaScript",
    "version": "0.0.3",
+   "keywords": ["Leftest", "Test", "Testing", "BDD", "GWT", "TypeScript"],
+   "license": "MIT",
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/antischematic/leftest.git"
+   },
+   "author": {
+      "name": "Michael Muscat"
+   },
    "type": "module"
 }
