--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       "vite": "^4.0.1",
       "vite-plugin-eslint": "^1.8.1",
       "vite-tsconfig-paths": "^4.0.2",
-      "vitest": "^0.25.8"
+      "vitest": "^0.25.8",
+      "cypress-replay": "file:../cypress-replay/cypress-replay-1.0.16.tgz"
    },
    "workspaces": [
       "packages/*"
