--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
       "baseUrl": ".",
       "paths": {
          "@antischematic/leftest": ["packages/core/src/index.ts"],
-         "@antischematic/leftest-cypress": ["packages/cypress/src/index.ts"]
+         "@antischematic/leftest-cypress": ["packages/cypress/src/index.ts"],
+         "@antischematic/leftest-playwright": ["packages/playwright/src/index.ts"]
       }
    },
    "exclude": ["node_modules", "tmp"]
