feat: Add Cypress harness

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
     "cypress": "^12.10.0",
+    "cypress-pipe": "^2.0.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
