--- a/packages/cypress/tsconfig.lib.json
+++ b/packages/cypress/tsconfig.lib.json
@@ -3,7 +3,7 @@
    "compilerOptions": {
       "outDir": "../../dist/out-tsc",
       "declaration": true,
-      "types": ["cypress"]
+      "types": ["cypress", "cypress-pipe"]
    },
    "include": ["src/**/*.ts"],
    "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
