--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -13,6 +13,7 @@
    },
    "type": "module",
    "peerDependencies": {
+      "cypress-pipe": "^2.0.0",
       "mocha": "^10.0.0",
       "@antischematic/leftest": "^0.0.10"
    }
