build: Switch to CommonJS format

--- a/packages/playwright/project.json
+++ b/packages/playwright/project.json
@@ -5,7 +5,7 @@
    "projectType": "library",
    "targets": {
       "build": {
-         "executor": "@nrwl/js:tsc",
+         "executor": "@nrwl/rollup:rollup",
          "outputs": ["{options.outputPath}"],
          "options": {
             "outputPath": "dist/packages/playwright",
@@ -17,7 +17,8 @@
               "output": "."
             }],
             "project": "packages/playwright/package.json",
-            "compiler": "tsc"
+            "compiler": "tsc",
+            "external": ["@playwright/test"]
          }
       },
       "lint": {
