--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -1,7 +1,7 @@
 {
    "name": "@antischematic/leftest-vitest",
    "description": "Shift-Left Testing for Vitest",
-   "version": "0.1.2",
+   "version": "0.1.3",
    "keywords": ["Leftest", "Vitest", "Test", "Testing", "BDD", "GWT", "Component", "TypeScript"],
    "license": "MIT",
    "repository": {
@@ -13,7 +13,7 @@
    },
    "type": "module",
    "peerDependencies": {
-      "vitest": "^0.25.8",
-      "@antischematic/leftest": "~0.1.2"
+      "vitest": ">=0.25.8",
+      "@antischematic/leftest": "~0.1.3"
    }
 }
