--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "@types/node": "18.7.1",
       "@typescript-eslint/eslint-plugin": "^5.36.1",
       "@typescript-eslint/parser": "^5.36.1",
+      "@vitest/browser": "^0.34.2",
       "@vitest/coverage-c8": "~0.25.8",
       "@vitest/ui": "^0.25.8",
       "cypress": "^12.10.0",
@@ -40,10 +41,11 @@
       "react-dom": "^18.2.0",
       "typescript": "~4.9.5",
       "typescript-transform-paths": "^3.4.6",
-      "vite": "^4.0.1",
+      "vite": "^4.4.9",
       "vite-plugin-eslint": "^1.8.1",
-      "vite-tsconfig-paths": "^4.0.2",
-      "vitest": "^0.25.8"
+      "vite-tsconfig-paths": "^4.2.0",
+      "vitest": "^0.34.2",
+      "webdriverio": "^7.32.3"
    },
    "workspaces": [
       "packages/*"
