--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
    ],
    "dependencies": {
       "@nx/cypress": "^16.0.1",
-      "@swc/helpers": "~0.5.0"
+      "@swc/helpers": "~0.5.0",
+      "aria-query": "^5.3.0",
+      "dom-accessibility-api": "^0.6.1"
    }
 }
