--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,5 +11,9 @@
    "author": {
       "name": "Michael Muscat"
    },
-   "type": "module"
+   "type": "module",
+   "peerDependencies": {
+      "aria-roles": "^1.0.2",
+      "dom-accessibility-api": "^0.6.1"
+   }
 }
