feat: Add more query helpers

--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -17,7 +17,8 @@
              "output": "."
            }],
             "project": "packages/core/package.json",
-            "compiler": "tsc"
+            "compiler": "tsc",
+            "external": ["dom-accessibility-api", "aria-query"]
          }
       },
       "lint": {
