--- a/packages/cypress-e2e/project.json
+++ b/packages/cypress-e2e/project.json
@@ -5,7 +5,7 @@
    "projectType": "application",
    "targets": {
       "e2e": {
-         "executor": "@nx/cypress:cypress",
+         "executor": "@nrwl/cypress:cypress",
          "options": {
             "cypressConfig": "packages/cypress-e2e/cypress.config.ts",
             "testingType": "e2e"
@@ -15,7 +15,7 @@
          }
       },
       "lint": {
-         "executor": "@nx/linter:eslint",
+         "executor": "@nrwl/linter:eslint",
          "outputs": ["{options.outputFile}"],
          "options": {
             "lintFilePatterns": ["packages/cypress-e2e/**/*.{js,ts}"]
