--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
    },
    "private": true,
    "devDependencies": {
+      "@nrwl/cypress": "15.9.2",
       "@nrwl/eslint-plugin-nx": "15.9.2",
       "@nrwl/js": "15.9.4",
       "@nrwl/linter": "15.9.2",
       "@nrwl/rollup": "15.9.4",
       "@nrwl/vite": "15.9.2",
-      "@nrwl/cypress": "15.9.2",
       "@playwright/experimental-ct-react": "^1.36.1",
       "@playwright/test": "^1.36.1",
       "@pollyjs/adapter-fetch": "^6.0.5",
@@ -30,6 +30,7 @@
       "@typescript-eslint/parser": "^5.36.1",
       "@vitest/browser": "^0.34.2",
       "@vitest/coverage-c8": "~0.25.8",
+      "@vitest/coverage-v8": "^0.34.4",
       "@vitest/ui": "^0.25.8",
       "cypress": "^12.10.0",
       "cypress-pipe": "^2.0.0",
