--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -1,13 +1,14 @@
 {
    "name": "@antischematic/leftest-cypress",
    "description": "Shift-Left Testing for Cypress",
-   "version": "0.3.1",
+   "version": "0.4.0",
    "keywords": ["Leftest", "Cypress", "Test", "Testing", "BDD", "GWT", "Component", "TypeScript"],
    "license": "MIT",
    "repository": {
       "type": "git",
       "url": "https://github.com/antischematic/leftest.git"
    },
+   "homepage": "https://antischematic.github.io/leftest/",
    "author": {
       "name": "Michael Muscat"
    },
@@ -15,6 +16,6 @@
    "peerDependencies": {
       "cypress-pipe": "^2.0.0",
       "mocha": "^10.0.0",
-      "@antischematic/leftest": "~0.3.0"
+      "@antischematic/leftest": "~0.4.0"
    }
 }
